# src/dtos/auth-dtos.ts
@@ -1,14 +1,15 @@
 import { Profile, User } from '@prisma/client';
 
 type UserProfile = User & {
-  fullName: Profile['fullname'];
+  fullname: Profile['fullname'];
 };
 
 export type RegisterDTO = Pick<
   UserProfile,
-  'email' | 'password' | 'username' | 'fullName'
+  'email' | 'password' | 'username' | 'fullname'
 >;
 export type ForgotPasswordDTO = Pick<User, 'email'>;
+
 export type ResetPasswordDTO = {
   oldpassword: string;
   newpassword: string;
