# src/dtos/user-dtos.ts
@@ -1,11 +1,11 @@
 import { Profile, User } from '@prisma/client';
 
 type UserProfile = User & {
-  fullName: Profile['fullname'];
+  fullname: Profile['fullname'];
 };
 
 export type CreateUserDTO = Pick<
   UserProfile,
-  'email' | 'password' | 'username' | 'fullName'
+  'email' | 'password' | 'username' | 'fullname'
 >;
 export type UpdateUserDTO = Pick<UserProfile, 'email' | 'password'>;
