# src/utils/schemas/auth-schema.ts
@@ -1,13 +1,17 @@
 import joi from 'joi';
-import { RegisterDTO, ResetPasswordDTO } from '../../dtos/auth-dtos';
+import {
+  ForgotPasswordDTO,
+  RegisterDTO,
+  ResetPasswordDTO,
+} from '../../dtos/auth-dtos';
 
 const registerSchema = joi.object<RegisterDTO>({
   email: joi.string().email().required(),
   username: joi.string().min(2).required(),
   password: joi.string().min(6).required(),
-  fullName: joi.string(),
+  fullname: joi.string().min(4).max(100),
 });
-const forgotPasswordSchema = joi.object<RegisterDTO>({
+const forgotPasswordSchema = joi.object<ForgotPasswordDTO>({
   email: joi.string().email().required(),
 });
 const resetPasswordSchema = joi.object<ResetPasswordDTO>({
