# swagger/swagger-output.json
@@ -74,9 +74,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           }
         },
         "requestBody": {
@@ -100,6 +97,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           }
         },
         "security": [
@@ -113,8 +113,8 @@
       "post": {
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
           }
         },
         "requestBody": {
@@ -322,7 +322,7 @@
       "RegisterDTO": {
         "type": "object",
         "properties": {
-          "fullName": {
+          "fullname": {
             "type": "string"
           },
           "username": {
